# agilio-ovs-openstack-plugin

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/install/: index.rst
networking_netronome/: __init__.py
networking_netronome/plugins/ml2/drivers/: agilio_ovs_conf.py
networking_netronome/plugins/ml2/drivers/agilio_ovs/mech_driver/: mech_agilio_ovs.py
networking_netronome/tests/: test_networking_netronome_plugins_ml2_drivers_agilio_ovs.py
releasenotes/source/: conf.py  index.rst
vif_plug_agilio_ovs/: agilio_linux_net.py  agilio_ovs.py  privsep.py
vif_plug_agilio_ovs/objects/: vif.py
