[metadata]
name = networking-netronome
version = 2017.06
summary = Neutron ML2 and OS-VIF plugin for Agilio OVS
description-file =
    README.rst
author = Netronome
author-email = support@netronome.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_netronome
    vif_plug_agilio_ovs

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_netronome/plugins/ml2/drivers/agilio_ovs/locale
domain = networking_netronome

[update_catalog]
domain = networking_netronome
output_dir = networking_netronome/plugins/ml2/drivers/agilio_ovs/locale
input_file = networking_netronome/plugins/ml2/drivers/agilio_ovs/locale/agilio_ovs.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_netronome/plugins/ml2/drivers/agilio_ovs/locale/agilio_ovs.pot

[entry_points]
neutron.ml2.mechanism_drivers =
    agilio_ovs = networking_netronome.plugins.ml2.drivers.agilio_ovs.mech_driver.mech_agilio_ovs:AgilioOvsMechanismDriver
os_vif =
    agilio_ovs = vif_plug_agilio_ovs.agilio_ovs:AgilioOvsPlugin
